timeline Dots aligned correctly

--- a/index.css
+++ b/index.css
@@ -321,9 +321,9 @@ h2 {
 .experience-container::after {
   content: '';
   position: absolute;
-  width: 25px;
-  height: 25px;
-  right: -17px;
+  width: 20px;
+  height: 20px;
+  right: -8px;
   background-color: white;
   border: 4px solid #FF9F55;
   top: 15px;
@@ -371,7 +371,7 @@ h2 {
 
 /* Fix the circle for containers on the right side */
 .right::after {
-  left: -16px;
+  left: -12px;
 }
 
 /* The actual content */
